--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SSL": {
+    "PemFile": "/etc/letsencrypt/live/dev.fergl.ie/fullchain.pem",
+    "KeyFile": "/etc/letsencrypt/live/dev.fergl.ie/privkey.pem"
   }
 }
