--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-api.fergl.ie-b899f8de-d911-4922-9247-97db7392e48b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=api.fergl.ie;Username=postgres;Password=hackme"
   },
   "Logging": {
     "LogLevel": {
